workloads/default/dashboard.vs.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: dashboard
  namespace: default

spec:
  gateways: ["primary.istio-system"]
  hosts: ["dashboard.stevenxie.me"]
  http:
    - route:
        - destination:
            host: kubernetes-dashboard.kube-system.svc.cluster.local
            port:
              number: 80
          headers:
            response:
              set:
                X-Service: dashboard
